another minor fix to installation script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,9 +87,6 @@ add_subdirectory(src/application)
 install(TARGETS dccl EXPORT dcclTargets
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-install(DIRECTORY
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        FILES_MATCHING
-        PATTERN "*.h"
-        PATTERN "*.hpp")
+    install(FILES
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/dccl.hpp
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
