[WIP] fix all warnings.

--- a/src/application/CMakeLists.txt
+++ b/src/application/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.12.4)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-add_executable(allreduce allreduce.cpp)
-target_include_directories(allreduce PRIVATE
+add_executable(dccl_cli dccl_cli.cpp)
+target_include_directories(dccl_cli PRIVATE
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
-target_link_libraries(allreduce dccl)
-add_dependencies(allreduce dccl)
+target_link_libraries(dccl_cli dccl)
+add_dependencies(dccl_cli dccl)
 
-add_custom_command(TARGET allreduce POST_BUILD
+add_custom_command(TARGET dccl_cli POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/cfg
         ${CMAKE_CURRENT_BINARY_DIR}/cfg
     COMMAND ln -sf ${CMAKE_CURRENT_BINARY_DIR}/cfg/layout.json
