--- a/src/application/CMakeLists.txt
+++ b/src/application/CMakeLists.txt
@@ -19,6 +19,8 @@ add_custom_command(TARGET dccl_cli POST_BUILD
         ${CMAKE_CURRENT_BINARY_DIR}/cfg/n1/layout.json
     COMMAND ln -sf ${CMAKE_CURRENT_BINARY_DIR}/cfg/layout.json
         ${CMAKE_CURRENT_BINARY_DIR}/cfg/n2/layout.json
+    COMMAND ln -sf ${CMAKE_CURRENT_BINARY_DIR}/cfg/layout.json
+        ${CMAKE_CURRENT_BINARY_DIR}/cfg/n3/layout.json
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/cfg/layout.json
     COMMENT "prepare demo configuration"
 )
