--- a/src/application/CMakeLists.txt
+++ b/src/application/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 add_executable(dccl_cli dccl_cli.cpp)
 target_include_directories(dccl_cli PRIVATE
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 target_link_libraries(dccl_cli dccl)
