+OpenMPI comparison source code. TODO: test.

--- a/config.h.in
+++ b/config.h.in
@@ -1,2 +1,6 @@
 #cmakedefine    ENABLE_EVALUATION
 #cmakedefine    CACHELINE_SIZE  @CACHELINE_SIZE@
+#cmakedefine    MPI_CXX_FOUND
+#cmakedefine    MPI_CXX_VERSION_MAJOR @MPI_CXX_VERSION_MAJOR@
+#cmakedefine    MPI_CXX_VERSION_MINOR @MPI_CXX_VERSION_MINOR@
+#cmakedefine    MPI_CXX_VERSION @MPI_CXX_VERSION@
