add reduce scatter API, TODO: replace AllReduce ring algorithm with reduce_scatter_ring algorithm.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 add_library(core OBJECT 
     dccl.cpp blob.cpp internal_common.cpp 
     reduce_scatter_recursive_halving.cpp
+    reduce_scatter_ring.cpp
     all_gather_recursive_doubling.cpp
     all_reduce_recursive_halving_and_doubling.cpp
     all_reduce_ring.cpp)
