--- a/config.h.in
+++ b/config.h.in
@@ -4,3 +4,4 @@
 #cmakedefine    MPI_CXX_VERSION_MAJOR @MPI_CXX_VERSION_MAJOR@
 #cmakedefine    MPI_CXX_VERSION_MINOR @MPI_CXX_VERSION_MINOR@
 #cmakedefine    MPI_CXX_VERSION @MPI_CXX_VERSION@
+#cmakedefine    CUDA_FOUND
