--- a/config.h.in
+++ b/config.h.in
@@ -5,3 +5,5 @@
 #cmakedefine    MPI_CXX_VERSION_MINOR @MPI_CXX_VERSION_MINOR@
 #cmakedefine    MPI_CXX_VERSION @MPI_CXX_VERSION@
 #cmakedefine    CUDA_FOUND
+#cmakedefine    CUDA_L1_CACHELINE_SIZE  @CUDA_L1_CACHELINE_SIZE@
+#cmakedefine    CUDA_L2_CACHELINE_SIZE  @CUDA_L2_CACHELINE_SIZE@
